testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment24.errors.txt
usage.js(2,13): error TS2339: Property 'Message' does not exist on type 'typeof Inner'.
usage.js(7,12): error TS2749: 'Outer.Inner' refers to a value, but is being used as a type here. Did you mean 'typeof Outer.Inner'?


==== usage.js (2 errors) ====
    // note that usage is first in the compilation
    Outer.Inner.Message = function() {
                ~~~~~~~
!!! error TS2339: Property 'Message' does not exist on type 'typeof Inner'.
    };
    
    var y = new Outer.Inner()
    y.name
    /** @type {Outer.Inner} should be instance type, not static type */
               ~~~~~~~~~~~
!!! error TS2749: 'Outer.Inner' refers to a value, but is being used as a type here. Did you mean 'typeof Outer.Inner'?
    var x;
    x.name
    
==== def.js (0 errors) ====
    var Outer = {}
    Outer.Inner = class {
      name() {
        return 'hi'
      }
    }
    